# revoy-open

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: smoke.yaml
.github/workflows/scripts/: podman-check-formatting.sh  podman-chrono-test.sh  podman-unit-test.sh
assembly/: BUILD.bazel  README.md
assembly/include/: assembly.h  tractor-revoy-trailer.h  tractor-trailer.h
assembly/src/: assembly.cpp  gnuplot.cpp  tractor-revoy-trailer.cpp  tractor-trailer.cpp
assembly/test/: test-assembly.cpp
ci-runner/: check-formatting.sh  chrono-test.sh  get-image.sh  unit-test.sh
code_style/: BUILD.bazel  format_everything.py
containers/: README.md  buildah-image.sh
containers/convenience-scripts/: README.md  add-extra-tools-to-dev-env.sh  clean-podman-buildah-containers-and-images.sh  install-podman.sh  start-dev-env-extra-tools.sh  start-dev-env.sh
helm/: BUILD.bazel  README.md  SCENARIOS.md  action.h  goal.h  helm.c  helm.h  instrument-reading.h  pedal.h  remote-player.c  remote-player.h  remote-script.h  results.h  test-helm.c  test-remote-player.cpp  testutil-fake-vehicle-update.c  testutil-fake-vehicle-update.h  useful-scenario-defs.h
helm/test/: test-remote-control-translation.cpp
planning/: BUILD.bazel  README.md
planning/collisions/: BUILD.bazel  add-footprint-to-grid.cpp  add-footprint-to-grid.h  footprint-overlap.cpp  footprint-transform.cpp  test-collisions.cpp
planning/footprint-transform/: BUILD.bazel
planning/include/: fill-graph.h  footprint-transform.h  make-scenario.h  mcap-utils.h  mock-revoy-ev.h  occupancy-grid.h  planning.h  proximity-planner.h  revoy-space.h  simpl-mcap.h  simpl-to-scene.h  simpl.h  types.h
planning/make-scenario/: BUILD.bazel
planning/mock-revoy-ev/: BUILD.bazel  mock-revoy-ev.cpp
planning/occupancy-grid/: BUILD.bazel
planning/ompl-planners/: BUILD.bazel  fill-graph.h
planning/planners/: BUILD.bazel  proximity-planner.cpp  proximity-planner.h
planning/pure-c-wrapper/: BUILD.bazel  planning.cpp
planning/simpl/: BUILD.bazel  add-footprint-to-grid.h  footprint-overlap.h  foxglove-utils.cpp  run-simpl.cpp  simpl-mcap.cpp  simpl.cpp  simpl.h  test-simpl.cpp
planning/simpl-mcap/: BUILD.bazel  fill-graph.h  fill-path.h  foxglove-utils.h  simpl-mcap.cpp  simpl-mcap.h
planning/src/: add-footprint-to-grid.cpp  fill-graph.cpp  footprint-transform.cpp  make-scenario.cpp  mcap-utils.cpp  mock-revoy-ev.cpp  occupancy-grid.cpp  planning.cpp  proximity-planner.cpp  revoy-space.cpp  run-simpl.cpp  run-two-d-simulator.cpp  simpl-mcap.cpp  simpl-to-scene.cpp  simpl.cpp
planning/test/: test-planning.cpp  test-simpl.cpp
planning/types/: BUILD.bazel  types.cpp  types.h
revoy-chrono/: BUILD.bazel  README.md  RevoyKraz.cpp  RevoyKraz.h  chrono-mcap.cpp  chrono-mcap.h  env-check.cpp  env-check.h  irr-helper.cpp  irr-helper.h  test-revoy-chrono.cpp
toolchains/container/: BUILD
toolchains/linux/: BUILD.bazel
zaxis/: BUILD.bazel  README.md  make-scenarios.cpp  make-scenarios.h  run-zaxis.cpp  test-zaxis.cpp  zaxis.cpp  zaxis.h
