cc_library(
    name = "planning",
    srcs = [
        # "src/coarse-planner.cpp",
        # "src/control-planner.cpp",
        "src/planning.cpp",
        # "src/planning-pipeline.cpp",
        "src/proximity-planner.cpp",
    ],
    hdrs = [
        # "include/coarse-planner.h",
        # "include/control-planner.h",
        "include/planning.h",
        # "include/planning-pipeline.h",
        "include/proximity-planner.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":footprint-transform",
        ":occupancy-grid",
        ":revoy-space",
        ":types",
        "@ompl",
    ],
)

cc_library(
    name = "revoy-space",
    srcs = [
        "src/fill-graph.cpp",
        "src/revoy-space.cpp",
    ],
    hdrs = [
        "include/fill-graph.h",
        "include/revoy-space.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":mock-revoy-ev",
        ":types",
        "@ompl",
    ],
)

cc_library(
    name = "footprint-transform",
    srcs = [
        "src/footprint-transform.cpp",
    ],
    hdrs = [
        "include/footprint-transform.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":types",
    ],
)

cc_library(
    name = "occupancy-grid",
    srcs = [
        "src/occupancy-grid.cpp",
    ],
    hdrs = [
        "include/occupancy-grid.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":types",
    ],
)

cc_library(
    name = "types",
    srcs = [
        "src/types.cpp",
    ],
    hdrs = [
        "include/types.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        "@eigen",
    ],
)

cc_test(
    name = "test-planning",
    srcs = ["test/test-planning.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":planning",
        "@catch2//:catch2_main",
    ],
)

cc_library(
    name = "simpl",
    srcs = [
        "src/add-footprint-to-grid.cpp",
        "src/footprint-overlap.cpp",
        "src/simpl.cpp",
    ],
    hdrs = [
        "include/add-footprint-to-grid.h",
        "include/footprint-overlap.h",
        "include/simpl.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":mock-revoy-ev",
        ":planning",
        "@clipper2",
    ],
)

cc_library(
    name = "mock-revoy-ev",
    srcs = [
        "src/mock-revoy-ev.cpp",
    ],
    hdrs = [
        "include/mock-revoy-ev.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":footprint-transform",
        ":types",
    ],
)

cc_library(
    name = "make-scenario",
    srcs = [
        "src/make-scenario.cpp",
    ],
    hdrs = [
        "include/make-scenario.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":types",
    ],
)

cc_test(
    name = "test-simpl",
    srcs = ["test/test-simpl.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":make-scenario",
        ":simpl",
        ":simpl-mcap",
        "@catch2//:catch2_main",
    ],
)

cc_binary(
    name = "run-simpl",
    srcs = ["src/run-simpl.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":make-scenario",
        ":simpl",
        ":simpl-mcap",
    ],
)

# cc_binary(
#     name = "run-control-planner",
#     srcs = ["src/run-control-planner.cpp"],
#     copts = [
#         "-Werror",
#     ],
#     deps = [
#         ":make-scenario",
#         ":simpl",
#     ],
# )

cc_library(
    name = "simpl-mcap",
    srcs = [
        "src/simpl-mcap.cpp",
    ],
    hdrs = [
        "include/simpl-mcap.h",
    ],
    copts = [
        "-Werror",
        "-Wno-gcc-compat",
    ],
    include_prefix = "planning",
    strip_include_prefix = "include",
    deps = [
        ":simpl",
        "//third-party/build-proto-fds",
        ## for some reason the upstream BCR foxglove broke, use WORKSPACE
        # "@foxglove_schemas_protobuf//:grid_cc_proto",
        # "@foxglove_schemas_protobuf//:poses_in_frame_cc_proto",
        # "@foxglove_schemas_protobuf//:scene_update_cc_proto",
        "@com-foxglove-schemas//:cpp",
        "@mcap",
    ],
)
