cc_library(
    name = "occupancy-grid",
    srcs = [
        "occupancy-grid.cpp",
    ],
    hdrs = [
        "occupancy-grid.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    visibility = ["//planning:__subpackages__"],
    deps = [
        "//planning/types",
    ],
)
