cc_library(
    name = "simpl",
    srcs = [
        "add-footprint-to-grid.cpp",
        "footprint-overlap.cpp",
        "simpl.cpp",
    ],
    hdrs = [
        "add-footprint-to-grid.h",
        "footprint-overlap.h",
        "simpl.h",
    ],
    copts = [
        "-Werror",
    ],
    include_prefix = "planning",
    deps = [
        "//planning/mock-revoy-ev",
        "//planning/ompl-planners:proximity-planner",
        "@clipper2",
    ],
)

cc_test(
    name = "test-simpl",
    srcs = ["test-simpl.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":simpl",
        ":simpl-mcap",
        "//planning/make-scenario",
        "@catch2//:catch2_main",
    ],
)

cc_binary(
    name = "run-simpl",
    srcs = ["run-simpl.cpp"],
    copts = [
        "-Werror",
    ],
    deps = [
        ":simpl",
        ":simpl-mcap",
        "//planning/make-scenario",
    ],
)

cc_library(
    name = "simpl-mcap",
    srcs = [
        "foxglove-utils.cpp",
        "simpl-mcap.cpp",
    ],
    hdrs = [
        "foxglove-utils.h",
        "simpl-mcap.h",
    ],
    copts = [
        "-Werror",
        "-Wno-gcc-compat",
    ],
    include_prefix = "planning",
    deps = [
        ":simpl",
        "//planning/footprint-transform",
        "//planning/occupancy-grid",
        "//planning/ompl-planners:proximity-planner",
        "//third-party/build-proto-fds",
        ## for some reason the upstream BCR foxglove broke, use WORKSPACE
        # "@foxglove_schemas_protobuf//:grid_cc_proto",
        # "@foxglove_schemas_protobuf//:poses_in_frame_cc_proto",
        # "@foxglove_schemas_protobuf//:scene_update_cc_proto",
        "@com-foxglove-schemas//:cpp",
        "@mcap",
    ],
)
